fixed the color settings and added a more comprehensive ui

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -33,10 +33,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="casual"
-        android:lineSpacingExtra="36sp"
+        android:fontFamily="monospace"
+        android:lineSpacingExtra="8sp"
         android:text="Scanning..."
         android:textAllCaps="false"
+        android:textSize="36sp"
         android:textStyle="bold|italic"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
