Made frontend design changes -TEXT -COLOR

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d1f39d"
     tools:context="com.example.leeon.sweettoothv1.MainActivity">
 
     <Button
         android:id="@+id/scanerButton"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@android:color/darker_gray"
+        android:elevation="20dp"
+        android:fontFamily="monospace"
         android:onClick="newPage"
         android:text="Scanner"
+        android:textColor="@color/colorPrimary"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,20 +34,22 @@
         android:id="@+id/panic"
         android:layout_width="301dp"
         android:layout_height="350dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="68dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_button"
         android:onClick="onClickStartBridgefy"
-        android:text="Help"
-        android:textSize="33sp"
-        app:layout_constraintBottom_toTopOf="@+id/scanerButton"
+        android:text="HELP"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        android:textSize="50dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.884" />
 
     <TextView
         android:id="@+id/textView2"
@@ -51,11 +59,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="41dp"
-        android:fontFamily="cursive"
-        android:text="SweetTooth"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Code Blue"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:textSize="36sp"
+        android:textSize="60sp"
         android:textStyle="bold|italic"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/panic"
