--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,19 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d1f39d"
     android:visibility="visible"
     tools:context="com.example.leeon.sweettoothv1.Main2Activity">
 
     <Button
         android:id="@+id/helpButton"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="612dp"
+        android:background="@android:color/darker_gray"
+        android:elevation="20dp"
         android:onClick="oldPage"
-        android:text="back"
+        android:text="Home Page"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,15 +32,15 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:fontFamily="monospace"
         android:lineSpacingExtra="8sp"
-        android:text="Scanning..."
+        android:text="Searching..."
         android:textAllCaps="false"
         android:textSize="36sp"
         android:textStyle="bold|italic"
