Made changes to frontend design -ALIGNMENT -PLACEMENT

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/darker_gray"
         android:elevation="20dp"
@@ -25,15 +25,15 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.041"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/panic"
-        android:layout_width="301dp"
-        android:layout_height="350dp"
+        android:layout_width="301sp"
+        android:layout_height="350sp"
         android:layout_marginBottom="68dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
@@ -42,7 +42,7 @@
         android:onClick="onClickStartBridgefy"
         android:text="HELP"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,14 +53,16 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="67dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="41dp"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="Code Blue"
+        android:text="Code Blew"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
         android:textSize="60sp"
